Infra/lambda.tf
resource "aws_iam_role" "vl_lambda_role" {
  name = "vl_lambda_rds_role"

  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": "sts:AssumeRole",
      "Principal": {
        "Service": "lambda.amazonaws.com"
      },
      "Effect": "Allow"
    }
  ]
}
EOF
}

resource "aws_iam_policy_attachment" "lambda_basic_execution" {
  name       = "lambda_basic_execution"
  roles      = [aws_iam_role.vl_lambda_role.name]
  policy_arn = "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
}

resource "aws_iam_policy_attachment" "lambda_vpc_access_execution" {
  name       = "lambda_vpc_access_execution"
  roles      = [aws_iam_role.vl_lambda_role.name]
  policy_arn = "arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
}

# Yes im lazy, full access it is. Change later
resource "aws_iam_policy_attachment" "attach_ses_full_access" {
  name       = "attach_ses_full_access"
  roles      = [aws_iam_role.vl_lambda_role.name]
  policy_arn = "arn:aws:iam::aws:policy/AmazonSESFullAccess"
}

resource "aws_lambda_layer_version" "db_lambda_layer" {
  filename         = "../db_lambda_layersV1.zip"
  layer_name       = "db_lambda_layer"
  compatible_runtimes = ["python3.13"]
}

# Archive the RSS Lambda source code
data "archive_file" "rss_lambda_zip" {
  type        = "zip"
  source_dir  = "../feed_parser_lambda"
  output_path = "${path.module}/RSS-lambda.zip"
}

# Archive the Vendor Info Lambda source code
data "archive_file" "vendor_info_lambda_zip" {
  type        = "zip"
  source_dir  = "../vendor_info_lambda"
  output_path = "${path.module}/vendor_info-lambda.zip"
}

# Archive the Account Handler Lambda source code
data "archive_file" "account_handler_lambda_zip" {
  type        = "zip"
  source_dir  = "../account_handler_lambda"
  output_path = "${path.module}/Account-handler-lambda.zip"
}

# Archive the User Handler Lambda source code
data "archive_file" "user_handler_lambda_zip" {
  type        = "zip"
  source_dir  = "../user_handler_lambda"
  output_path = "${path.module}/user-handler-lambda.zip"
}

# Archive the Subscriber Handler Lambda source code
data "archive_file" "subscriber_handler_lambda_zip" {
  type        = "zip"
  source_dir  = "../subscriber_handler_lambda"
  output_path = "${path.module}/subscriber-handler-lambda.zip"
}

# Archive the Vendor List Handler Lambda source code
data "archive_file" "vendor_list_handler_lambda_zip" {
  type        = "zip"
  source_dir  = "../vendor_list_handler_lambda"
  output_path = "${path.module}/vendor-list-handler-lambda.zip"
}

# Archive the Individual Subscription Lambda source code
data "archive_file" "individual_subscription_lambda_zip" {
  type        = "zip"
  source_dir  = "../individual_subscription_handler"
  output_path = "${path.module}/individual-subscription-lambda.zip"
}

# Archive the Vendor Assessment Tracking Lambda source code
data "archive_file" "vendor_assessment_tracking_lambda_zip" {
  type        = "zip"
  source_dir  = "../vendor_assessment_tracking_lambda"
  output_path = "${path.module}/vendor-assessment-tracking-lambda.zip"
}

resource "aws_lambda_function" "lambda" {
  function_name    = "lambda-RSS-handler"
  runtime          = "python3.13"
  role             = aws_iam_role.vl_lambda_role.arn
  handler          = "parser.lambda_handler"
  filename         = data.archive_file.rss_lambda_zip.output_path
  source_code_hash = data.archive_file.rss_lambda_zip.output_base64sha256
  timeout          = 240
  memory_size      = 1024
  layers           = [aws_lambda_layer_version.db_lambda_layer.arn]
  environment {
    variables = {
      DB_HOST     = aws_rds_cluster.ven_aurora.endpoint
      DB_USER     = var.db_user
      DB_PASS     = var.db_pass
      DB_NAME     = "postgres"
      RSS_FEED_URLS = jsonencode(var.rss_feed_urls)
      API_KEY     = var.api_key
    }
  }
  vpc_config {
    security_group_ids = [aws_security_group.lambda_sg.id]
    subnet_ids         = [data.aws_subnet.subnet1.id]
  }
}

resource "aws_lambda_function" "individual_subscription_lambda" {
  function_name    = "lambda-individual-subscription-handler"
  runtime          = "python3.13"
  role             = aws_iam_role.vl_lambda_role.arn
  handler          = "individual_subscription_manager.lambda_handler"
  filename         = data.archive_file.individual_subscription_lambda_zip.output_path
  source_code_hash = data.archive_file.individual_subscription_lambda_zip.output_base64sha256
  timeout          = 120
  memory_size      = 1024
  layers           = [aws_lambda_layer_version.db_lambda_layer.arn]
  environment {
    variables = {
      DB_HOST     = aws_rds_cluster.ven_aurora.endpoint
      DB_USER     = var.db_user
      DB_PASS     = var.db_pass
      DB_NAME     = "postgres"
    }
  }
  vpc_config {
    security_group_ids = [aws_security_group.lambda_sg.id]
    subnet_ids         = [data.aws_subnet.subnet1.id, data.aws_subnet.subnet2.id]
  }
}

resource "aws_lambda_function" "vendor_info_lambda" {
  function_name    = "lambda-vendor-info-handler"
  runtime          = "python3.13"
  role             = aws_iam_role.vl_lambda_role.arn
  handler          = "vendor_info.lambda_handler"
  filename         = data.archive_file.vendor_info_lambda_zip.output_path
  source_code_hash = data.archive_file.vendor_info_lambda_zip.output_base64sha256
  timeout          = 450
  memory_size      = 1024
  layers           = [aws_lambda_layer_version.db_lambda_layer.arn]
  environment {
    variables = {
      DB_HOST     = aws_rds_cluster.ven_aurora.endpoint
      DB_USER     = var.db_user
      DB_PASS     = var.db_pass
      DB_NAME     = "postgres"
      API_KEY     = var.api_key
      GOOGLE_API_KEY = var.google_api_key
      GOOGLE_CSE_ID  = var.google_cse_id
      GOOGLE_SEARCH_URL = var.google_search_url
      OPENAI_API_URL = var.openai_api_url
      PERPLEXITY_API_KEY = var.perplexity_api_key
      PERPLEXITY_API_URL = var.perplexity_api_url
    }
  }
  vpc_config {
    security_group_ids = [aws_security_group.lambda_sg.id]
    subnet_ids         = [data.aws_subnet.subnet1.id]
  }
}

resource "aws_lambda_function" "account_handler_lambda" {
  function_name    = "lambda-account-handler"
  runtime          = "python3.13"
  role             = aws_iam_role.vl_lambda_role.arn
  handler          = "account_handler.lambda_handler"
  filename         = data.archive_file.account_handler_lambda_zip.output_path
  source_code_hash = data.archive_file.account_handler_lambda_zip.output_base64sha256
  timeout          = 120
  memory_size      = 1024
  layers           = [aws_lambda_layer_version.db_lambda_layer.arn]
  environment {
    variables = {
      DB_HOST = aws_rds_cluster.ven_aurora.endpoint
      DB_USER = var.db_user
      DB_PASS = var.db_pass
      DB_NAME = "postgres"
    }
  }
  vpc_config {
    security_group_ids = [aws_security_group.lambda_sg.id]
    subnet_ids         = [data.aws_subnet.subnet1.id, data.aws_subnet.subnet2.id]
  }
}

resource "aws_lambda_function" "user_handler_lambda" {
  function_name    = "lambda-user-handler"
  runtime          = "python3.13"
  role             = aws_iam_role.vl_lambda_role.arn
  handler          = "user_handler.lambda_handler"
  filename         = data.archive_file.user_handler_lambda_zip.output_path
  source_code_hash = data.archive_file.user_handler_lambda_zip.output_base64sha256
  timeout          = 120
  memory_size      = 1024
  layers           = [aws_lambda_layer_version.db_lambda_layer.arn]
  environment {
    variables = {
      DB_HOST = aws_rds_cluster.ven_aurora.endpoint
      DB_USER = var.db_user
      DB_PASS = var.db_pass
      DB_NAME = "postgres"
    }
  }
  vpc_config {
    security_group_ids = [aws_security_group.lambda_sg.id]
    subnet_ids         = [data.aws_subnet.subnet1.id, data.aws_subnet.subnet2.id]
  }
}

resource "aws_lambda_function" "subscriber_handler_lambda" {
  function_name    = "lambda-subscriber-handler"
  runtime          = "python3.13"
  role             = aws_iam_role.vl_lambda_role.arn
  handler          = "subscriber_handler.lambda_handler"
  filename         = data.archive_file.subscriber_handler_lambda_zip.output_path
  source_code_hash = data.archive_file.subscriber_handler_lambda_zip.output_base64sha256
  timeout          = 120
  memory_size      = 1024
  layers           = [aws_lambda_layer_version.db_lambda_layer.arn]
  environment {
    variables = {
      DB_HOST = aws_rds_cluster.ven_aurora.endpoint
      DB_USER = var.db_user
      DB_PASS = var.db_pass
      DB_NAME = "postgres"
    }
  }
  vpc_config {
    security_group_ids = [aws_security_group.lambda_sg.id]
    subnet_ids         = [data.aws_subnet.subnet1.id, data.aws_subnet.subnet2.id]
  }
}

resource "aws_lambda_function" "vendor_list_handler_lambda" {
  function_name    = "lambda-vendor-list-handler"
  runtime          = "python3.13"
  role             = aws_iam_role.vl_lambda_role.arn
  handler          = "vendor_list_handler.lambda_handler"
  filename         = data.archive_file.vendor_list_handler_lambda_zip.output_path
  source_code_hash = data.archive_file.vendor_list_handler_lambda_zip.output_base64sha256
  timeout          = 120
  memory_size      = 1024
  layers           = [aws_lambda_layer_version.db_lambda_layer.arn]
  environment {
    variables = {
      DB_HOST = aws_rds_cluster.ven_aurora.endpoint
      DB_USER = var.db_user
      DB_PASS = var.db_pass
      DB_NAME = "postgres"
    }
  }
  vpc_config {
    security_group_ids = [aws_security_group.lambda_sg.id]
    subnet_ids         = [data.aws_subnet.subnet1.id, data.aws_subnet.subnet2.id]
  }
}

resource "aws_lambda_function" "vendor_assessment_tracking_lambda" {
  function_name    = "lambda-vendor-assessment-tracking-handler"
  runtime          = "python3.13"
  role             = aws_iam_role.vl_lambda_role.arn
  handler          = "vendor_assesment_tracking.lambda_handler"
  filename         = data.archive_file.vendor_assessment_tracking_lambda_zip.output_path
  source_code_hash = data.archive_file.vendor_assessment_tracking_lambda_zip.output_base64sha256
  timeout          = 120
  memory_size      = 1024
  layers           = [aws_lambda_layer_version.db_lambda_layer.arn]
  environment {
    variables = {
      DB_HOST = aws_rds_cluster.ven_aurora.endpoint
      DB_USER = var.db_user
      DB_PASS = var.db_pass
      DB_NAME = "postgres"
    }
  }
  vpc_config {
    security_group_ids = [aws_security_group.lambda_sg.id]
    subnet_ids         = [data.aws_subnet.subnet1.id, data.aws_subnet.subnet2.id]
  }
}

# NAT Gateway and EIP for Lambda internet access
resource "aws_eip" "nat_eip" {
  domain = "vpc"
}

resource "aws_nat_gateway" "nat_gw" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.subnet2.id
}

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gw.id
  }
}

resource "aws_route_table_association" "subnet1_association" {
  subnet_id      = aws_subnet.subnet1.id
  route_table_id = aws_route_table.private_rt.id
}


# Frequency can be adjusted here
resource "aws_cloudwatch_event_rule" "rss_handler_schedule" {
  name        = "rss-handler-schedule"
  description = "Trigger RSS handler Lambda every 3 hours"
  schedule_expression = "rate(3 hours)"
  state = "ENABLED"
}

resource "aws_cloudwatch_event_target" "rss_handler_target" {
  rule      = aws_cloudwatch_event_rule.rss_handler_schedule.name
  target_id = "rss-handler-lambda"
  arn       = aws_lambda_function.lambda.arn

  input = jsonencode({
    hours = 3
  })
}

resource "aws_lambda_permission" "allow_cloudwatch_to_invoke_rss_handler" {
  statement_id  = "AllowExecutionFromCloudWatch"
  action        = "lambda:InvokeFunction"
  function_name = aws_lambda_function.lambda.function_name
  principal     = "events.amazonaws.com"
  source_arn    = aws_cloudwatch_event_rule.rss_handler_schedule.arn
}
